# High-Agency-Trainer

./: .gitignore  Companion Project Scope - AI Developer.md  README.md  agents.md  pyproject.toml
companion/: main.js
companion/renderer/: index.html
companion/tracker/: categoriser.js  windowTracker.js
docs/: implementation-status.md
docs/adr/: 0001-event-sourced-local-pipeline.md
docs/learning/: 24-week-curriculum.md
src/invasive_ai_calendar/: __init__.py  cli.py  config.py  db.py  models.py  reports.py
src/invasive_ai_calendar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/invasive_ai_calendar/calendar/: __init__.py  builder.py  pipeline.py
src/invasive_ai_calendar/classifier/: pipeline.py  rules.py  service.py
src/invasive_ai_calendar/collector/: providers.py  service.py
src/invasive_ai_calendar/processor/: pipeline.py  sessionizer.py
tests/: test_calendar_builder.py  test_classifier_rules.py  test_collector_dedupe.py  test_db_idempotency.py  test_sessionizer.py
