[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invasive-ai-calendar"
version = "0.1.0"
description = "macOS-first local AI calendar built from OS activity telemetry"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
mac = ["pyobjc-framework-AppKit>=10.0", "pyobjc-framework-Quartz>=10.0"]
dev = ["pytest>=8.2,<9", "ruff>=0.6,<1"]

[project.scripts]
aical = "invasive_ai_calendar.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
